--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
                         <i class="fa fa-bars text-xl"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="#" class="block text-[#304463] hover:text-[#FFC7ED] py-1">УСЛОВИЯ ЗА ПОЛЗВАНЕ НА
-                            САЙТА</a>
+                        <a href="#" class="block text-[#304463] hover:text-[#FFC7ED] py-1">УСЛОВИЯ ЗА ПОЛЗВАНЕ НА САЙТА</a>
                         <a href="#" class="block text-[#304463] hover:text-[#FFC7ED] py-1">ПРАВИЛА ЗА ЗАКУПУВАНЕ</a>
+                        <a href="#" class="block text-[#304463] hover:text-[#FFC7ED] py-1">ПОРЪЧКА И ДОСТАВКА</a>
+                        <a href="#" class="block text-[#304463] hover:text-[#FFC7ED] py-1">ПОЛИТИКА ЗА ЗАЩИТА НА ЛИЧНИ ДАННИ</a>
+                        <a href="#" class="block text-[#304463] hover:text-[#FFC7ED] py-1">УСЛОВИЯ НА ПРОГРАМА ЗА ЛОЯЛНОСТ</a>
+                        <a href="#" class="block text-[#304463] hover:text-[#FFC7ED] py-1">ПОЛИТИКА ЗА БИСКВИТКИ</a>
+                        <a href="#" class="block text-[#304463] hover:text-[#FFC7ED] py-1">ПОЛИТИКА ЗА ВРЪЩАНЕ</a>
                     </div>
                 </div>
                 <!-- Search Icon -->
